--- a/pioneer-team/src/main/resources/application.yaml
+++ b/pioneer-team/src/main/resources/application.yaml
@@ -1,1 +1,24 @@
+server:
+  port: 0
 
+spring:
+  application:
+    name: team-service
+  data:
+    mongodb:
+      authentication-database: admin
+      username:
+      password:
+      database: team-specs
+      port: 27017
+      host: localhost
+      auto-index-creation: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8081/eureka
+
+grpc:
+  server:
+    port: 0
