--- a/pioneer-team/src/main/resources/application.yaml
+++ b/pioneer-team/src/main/resources/application.yaml
@@ -20,5 +20,10 @@ eureka:
       defaultZone: http://localhost:8081/eureka
 
 grpc:
+  cloud-grpc-server:
+    address: 'discovery://api-gateway'
+    enableKeepAlive: true
+    keepAliveWithoutCalls: true
+    negotiationType: plaintext
   server:
     port: 0
