--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
 				<artifactId>grpc-client-spring-boot-starter</artifactId>
 				<version>2.13.1.RELEASE</version>
 			</dependency>
+			<dependency>
+				<groupId>net.devh</groupId>
+				<artifactId>grpc-server-spring-boot-starter</artifactId>
+				<version>2.13.1.RELEASE</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
