--- a/pioneer-team/src/main/resources/application.yaml
+++ b/pioneer-team/src/main/resources/application.yaml
@@ -7,8 +7,8 @@ spring:
   data:
     mongodb:
       authentication-database: admin
-      username:
-      password:
+      username: root
+      password: root
       database: team-specs
       port: 27017
       host: localhost
