--- a/pioneer-gateway/src/main/resources/application.yaml
+++ b/pioneer-gateway/src/main/resources/application.yaml
@@ -1,11 +1,18 @@
 server:
-  port: 8080
+  port: 8000
 
 spring:
   application:
-    name: gateway-service
+    name: api-gateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
 
 eureka:
   client:
+    registerWithEureka: false
     service-url:
-      defaultZone: http://localhost:8080/eureka
+      default-zone: http://localhost:8761/eureka/
